[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/CatchTheGifts.gd" type="Script" id=1]
[ext_resource path="res://User Interface/PauseMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://User Interface/Time Bar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Tilesets/Background.tres" type="TileSet" id=4]
[ext_resource path="res://Tilesets/Snow 2.0/SnowTileSet2.tres" type="TileSet" id=5]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 240, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 16 )

[node name="CatchTheGifts" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer(Layer6)" type="CanvasLayer" parent="."]
layer = 6

[node name="PauseMenu" parent="CanvasLayer(Layer6)" instance=ExtResource( 2 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="Time Bar" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="Background" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 100, 100 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
collision_layer = 7
collision_mask = 7
format = 1
tile_data = PoolIntArray( 458750, 0, 0, 458751, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 2, 0, 393238, 0, 0, 393239, 1, 0, 393240, 1, 0, 393241, 1, 0, 393242, 2, 0, 524286, 3, 0, 524287, 4, 0, 458752, 4, 0, 458753, 4, 0, 458754, 5, 0, 458774, 3, 0, 458775, 4, 0, 458776, 4, 0, 458777, 4, 0, 458778, 5, 0, 589814, 0, 0, 589815, 1, 0, 589816, 2, 0, 589822, 3, 0, 589823, 4, 0, 524288, 4, 0, 524289, 4, 0, 524290, 5, 0, 524310, 3, 0, 524311, 4, 0, 524312, 4, 0, 524313, 4, 0, 524314, 5, 0, 524320, 0, 0, 524321, 1, 0, 524322, 2, 0, 655350, 3, 0, 655351, 4, 0, 655352, 5, 0, 655358, 6, 0, 655359, 7, 0, 589824, 7, 0, 589825, 7, 0, 589826, 8, 0, 589846, 6, 0, 589847, 7, 0, 589848, 7, 0, 589849, 7, 0, 589850, 8, 0, 589856, 3, 0, 589857, 4, 0, 589858, 5, 0, 720886, 3, 0, 720887, 4, 0, 720888, 5, 0, 655392, 3, 0, 655393, 4, 0, 655394, 5, 0, 786422, 3, 0, 786423, 4, 0, 786424, 5, 0, 720928, 3, 0, 720929, 4, 0, 720930, 5, 0, 851958, 3, 0, 851959, 4, 0, 851960, 5, 0, 786464, 3, 0, 786465, 4, 0, 786466, 5, 0, 917494, 3, 0, 917495, 4, 0, 917496, 9, 0, 917497, 1, 0, 917498, 1, 0, 917499, 1, 0, 917500, 1, 0, 917501, 1, 0, 917502, 1, 0, 917503, 1, 0, 851968, 1, 0, 851969, 1, 0, 851970, 1, 0, 851971, 1, 0, 851972, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 1, 0, 851984, 1, 0, 851985, 1, 0, 851986, 1, 0, 851987, 1, 0, 851988, 1, 0, 851989, 1, 0, 851990, 1, 0, 851991, 1, 0, 851992, 1, 0, 851993, 1, 0, 851994, 1, 0, 851995, 1, 0, 851996, 1, 0, 851997, 1, 0, 851998, 1, 0, 851999, 1, 0, 852000, 10, 0, 852001, 4, 0, 852002, 5, 0, 983030, 3, 0, 983031, 4, 0, 983032, 4, 0, 983033, 4, 0, 983034, 4, 0, 983035, 4, 0, 983036, 4, 0, 983037, 4, 0, 983038, 4, 0, 983039, 4, 0, 917504, 4, 0, 917505, 4, 0, 917506, 4, 0, 917507, 4, 0, 917508, 4, 0, 917509, 4, 0, 917510, 4, 0, 917511, 4, 0, 917512, 4, 0, 917513, 4, 0, 917514, 4, 0, 917515, 4, 0, 917516, 4, 0, 917517, 4, 0, 917518, 4, 0, 917519, 4, 0, 917520, 4, 0, 917521, 4, 0, 917522, 4, 0, 917523, 4, 0, 917524, 4, 0, 917525, 4, 0, 917526, 4, 0, 917527, 4, 0, 917528, 4, 0, 917529, 4, 0, 917530, 4, 0, 917531, 4, 0, 917532, 4, 0, 917533, 4, 0, 917534, 4, 0, 917535, 4, 0, 917536, 4, 0, 917537, 4, 0, 917538, 5, 0, 1048566, 6, 0, 1048567, 7, 0, 1048568, 7, 0, 1048569, 7, 0, 1048570, 7, 0, 1048571, 7, 0, 1048572, 7, 0, 1048573, 7, 0, 1048574, 7, 0, 1048575, 7, 0, 983040, 7, 0, 983041, 7, 0, 983042, 7, 0, 983043, 7, 0, 983044, 7, 0, 983045, 7, 0, 983046, 7, 0, 983047, 7, 0, 983048, 7, 0, 983049, 7, 0, 983050, 7, 0, 983051, 7, 0, 983052, 7, 0, 983053, 7, 0, 983054, 7, 0, 983055, 7, 0, 983056, 7, 0, 983057, 7, 0, 983058, 7, 0, 983059, 7, 0, 983060, 7, 0, 983061, 7, 0, 983062, 7, 0, 983063, 7, 0, 983064, 7, 0, 983065, 7, 0, 983066, 7, 0, 983067, 7, 0, 983068, 7, 0, 983069, 7, 0, 983070, 7, 0, 983071, 7, 0, 983072, 7, 0, 983073, 7, 0, 983074, 8, 0 )

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 208, 186 )

[node name="CollectSound" parent="Player" index="8"]
bus = "Collect"

[node name="ItemVoid" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemVoid"]
position = Vector2( 208, 288 )
shape = SubResource( 1 )

[node name="GameTime" type="Timer" parent="."]

[node name="EnterTime" type="Timer" parent="."]

[node name="NumberGenerator" type="Timer" parent="."]

[node name="EnemySpawnTime" type="Timer" parent="."]

[node name="Area Triggers" type="Node" parent="."]

[node name="Right" type="Area2D" parent="Area Triggers"]
position = Vector2( -64, 186 )
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area Triggers/Right"]
shape = SubResource( 2 )

[node name="Left" type="Area2D" parent="Area Triggers"]
position = Vector2( 464, 186 )
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area Triggers/Left"]
shape = SubResource( 2 )

[node name="Spawn Points" type="Node" parent="."]

[node name="Enemy Points" type="Node" parent="Spawn Points"]

[node name="Position1" type="Position2D" parent="Spawn Points/Enemy Points"]
position = Vector2( -64, 186 )

[node name="Position2" type="Position2D" parent="Spawn Points/Enemy Points"]
position = Vector2( 464, 186 )

[node name="Item Points" type="Node" parent="Spawn Points"]

[node name="Position1" type="Position2D" parent="Spawn Points/Item Points"]
position = Vector2( 64, 0 )

[node name="Position2" type="Position2D" parent="Spawn Points/Item Points"]
position = Vector2( 96, 0 )

[node name="Position3" type="Position2D" parent="Spawn Points/Item Points"]
position = Vector2( 128, 0 )

[node name="Position4" type="Position2D" parent="Spawn Points/Item Points"]
position = Vector2( 160, 0 )

[node name="Position5" type="Position2D" parent="Spawn Points/Item Points"]
position = Vector2( 192, 0 )

[node name="Position6" type="Position2D" parent="Spawn Points/Item Points"]
position = Vector2( 224, 0 )

[node name="Position7" type="Position2D" parent="Spawn Points/Item Points"]
position = Vector2( 256, 0 )

[node name="Position8" type="Position2D" parent="Spawn Points/Item Points"]
position = Vector2( 288, 0 )

[node name="Position9" type="Position2D" parent="Spawn Points/Item Points"]
position = Vector2( 325, 0 )

[node name="InvisibleWalls" type="Node" parent="."]

[node name="Wall1" type="StaticBody2D" parent="InvisibleWalls"]
position = Vector2( -16, 186 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="InvisibleWalls/Wall1"]
shape = SubResource( 3 )

[node name="Wall2" type="StaticBody2D" parent="InvisibleWalls"]
position = Vector2( 416, 186 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="InvisibleWalls/Wall2"]
shape = SubResource( 3 )
[connection signal="area_entered" from="ItemVoid" to="." method="_on_ItemVoid_area_entered"]
[connection signal="timeout" from="GameTime" to="." method="_on_GameTime_timeout"]
[connection signal="timeout" from="EnterTime" to="." method="_on_EnterTime_timeout"]
[connection signal="timeout" from="NumberGenerator" to="." method="_on_NumberGenerator_timeout"]
[connection signal="timeout" from="EnemySpawnTime" to="." method="_on_EnemySpawnTime_timeout"]
[connection signal="body_entered" from="Area Triggers/Right" to="." method="_on_Right_body_entered"]
[connection signal="body_entered" from="Area Triggers/Left" to="." method="_on_Left_body_entered"]

[editable path="CanvasLayer(Layer6)/PauseMenu"]

[editable path="CanvasLayer/Time Bar"]

[editable path="Player"]
